Added populator package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,9 @@ spring.threads.virtual.enabled=true
 # Multipart properties
 spring.servlet.multipart.max-file-size=3MB
 server.tomcat.max-swallow-size=-1
+
+# Redis server properties
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
