--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,8 @@ server.tomcat.max-swallow-size=-1
 # Redis server properties
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
+
+# TTL (Time To Live) is 10 minutes
+spring.cache.redis.time-to-live=600000
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
