--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,26 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.pool-name=hikari-cp-service-pool
+spring.datasource.maximum-pool-size=10
+spring.datasource.connection-timeout=3000
+spring.datasource.minimum-idle=10
+spring.datasource.minimum-idle.idle-timeout=60000
+spring.datasource.auto-commit=false
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show_sql=false
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.batch_size=25
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show_sql=false
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.redisson.hibernate.RedissonRegionFactory
+spring.jpa.properties.hibernate.cache.connection.provider_disables_autocommit=true
+
+spring.jpa.properties.redisson-config=classpath:redisson.yaml
 
 # Logger
 logging.buffer.size=1024
